--- a/Module2-assignment/index.html
+++ b/Module2-assignment/index.html
@@ -2,21 +2,23 @@
 <html>
     <head>
         <title>Menu</title>
-        <meta></meta>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h2>Our Menu</h2>
-        <div>
-            <div>
-                <h5>Chicken</h5>
+        <div class="row">
+            <div class="col-1 desk tab mob">
+                <div id="c">Chicken</div>
                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
-            <div>
-                <h5>Beef</h5>
+            <div class="col-2 desk tab mob">
+                <div id="b">Beef</div>
                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
-            <div>
-                <h5>Sushi</h5>
+            <div class="col-3 desk tab mob">
+                <div id="s">Sushi</div>
                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
         </div>
