--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Menu</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <h2>Our Menu</h2>
