--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
         <title>Menu</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h2>Our Menu</h2>
         <div class="row">
             <div class="col-1 desk tab mob">
+              <section>
                 <div id="c">Chicken</div>
                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                </section>
             </div>
             <div class="col-2 desk tab mob">
+              <section>
                 <div id="b">Beef</div>
                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                </section>
             </div>
             <div class="col-3 desk tab mob">
+              <section>
                 <div id="s">Sushi</div>
                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                </section>
             </div>
         </div>
     </body>
