--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
   </header>
 <!-- main content -->
-<div class="container">
+<div class="container-fluid">
   <h2 class="text-center">Our Menu</h2>
   <div class="row">
       <div class="col-md-4 col-sm-6 col-xs-12">
